--- a/apps/app/public/locales/en/common.json
+++ b/apps/app/public/locales/en/common.json
@@ -10,7 +10,10 @@
 		"organization": "{{adjective}} organization"
 	},
 	"agree-disclaimer": "By clicking \"{{action}}\" you agree to InReach's <link1>Privacy Policy</link1> and <link2>Terms of Use</link2>.",
+	"alert-message": "Alert message",
 	"alert-message-1": "<strong>COVID-19 policy:</strong> With news and best practices for COVID-19 prevention changing rapidly each day, Whitman-Walker Health continues to update their services to reflect prevention recommendations. Please check their website for the most up-to-date information.",
+	"alert-message-instructions": "Enter the alert message",
+	"alert-title-instructions": "Enter a title for the message...",
 	"all-service-category": "All {{serviceCategory}}",
 	"anti-hate": {
 		"body": "By using InReach, you agree that you will not use this resource information for harmful, hate-based, homophobic, transphobic, xenophobic, and/or racist agendas or commentary.",
@@ -114,6 +117,8 @@
 		"error-generic": "Something went wrong, please try again.",
 		"error-username-password": "Incorrect username or password."
 	},
+	"message_text": "Message text",
+	"message_title": "Message title",
 	"modal-content": {
 		"accessibility": "<stack16>\n<title2>InReach Accessibility Statement</title2>\n<textReg>InReach’s open source technology is built for the diverse LGBTQ+ community, including users with disabilities.</textReg>\n<textReg>The free InReach App is available on web (desktop and mobile), and native iOS and Android. Beginning with the launch of our latest redesign (February 2023), InReach will strive to meet <linkAccessibility>Web Content Accessibility Guidelines (WCAG) level AA criteria.</linkAccessibility></textReg>\n<textReg>At InReach, we strive to make our tech platform accessible for as many users and devices as possible in alignment with our mission to serve all LGBTQ+ people facing discrimination and persecution.</textReg>",
 		"disclaimer": "<stack16>\n<title2>InReach Disclaimer</title2>\n<textReg>The InReach team will do its best to confirm the eligibility and basic facts about service providers listed on this website. However, we cannot guarantee the viability or capabilities of any such providers. Consequently, InReach assumes no responsibility for the actions of providers listed on this website and users who contact any such providers do so at their own risk.</textReg>\n</stack16>"
@@ -124,6 +129,7 @@
 	"no-reviews": "No reviews yet",
 	"none-apply": "None of these apply to me",
 	"org-image": "Organization photo",
+	"organization": "Organization",
 	"other-specify": "Other (please specify)",
 	"password": "Password",
 	"password-confirm": "Confirm password",
@@ -185,6 +191,7 @@
 	"review_other": "Reviews",
 	"safety-exit": "Safety exit",
 	"save": "Save",
+	"save-changes": "Save changes",
 	"saved": "Saved",
 	"saved-lists": "Saved Lists",
 	"search": {
@@ -262,21 +269,21 @@
 	"suggest-a-resource": "Suggest a Resource",
 	"support": "Support",
 	"survey": {
+		"birthyear-req-value": "Year must be between {{year1}} and {{year2}}, i.e 2005",
 		"finish": "Finish",
 		"not-right-now": "Not right now",
-		"start-survey": "Start Survey",
-		"thank-you": "Thank you!",
-		"thank-you-message": "The information you shared helps us to improve our product.",
-		"question-subtitle": "Your answers are anonymous.",
 		"question-1-title": "How would you describe yourself?",
-		"question-2-title": "What is your country of origin?",
 		"question-2-placeholder": "Enter country...",
+		"question-2-title": "What is your country of origin?",
 		"question-3-title": "How do you identify?",
 		"question-4-title": "What is your ethnicity/race?",
-		"question-5-title": "How old are you?",
 		"question-5-label": "Year of birth",
 		"question-5-placeholder": "Enter your birth year...",
-		"birthyear-req-value": "Year must be between {{year1}} and {{year2}}, i.e 2005"
+		"question-5-title": "How old are you?",
+		"question-subtitle": "Your answers are anonymous.",
+		"start-survey": "Start Survey",
+		"thank-you": "Thank you!",
+		"thank-you-message": "The information you shared helps us to improve our product."
 	},
 	"take-action": "Take Action",
 	"uncheck-all": "Uncheck all",
