--- a/apps/app/public/locales/en/landingPage.json
+++ b/apps/app/public/locales/en/landingPage.json
@@ -13,7 +13,7 @@
 			"5": "LGBTQ+ BIPOC communities",
 			"6": "caregivers of LGBTQ+ youth"
 		},
-		"find-resources": "Find verified <Service></Service> for <Community></Community> with InReach.",
+		"find-resources": "<Text>Find verified </Text><Service></Service><Text> for </Text><Community></Community><Text> with InReach.</Text>",
 		"heading": "Find LGBTQ+ resources.",
 		"services": {
 			"0": "medical care",
@@ -33,7 +33,7 @@
 		"free": "<Title2>Free forever 🔑</Title2>\n<Text>Our tech platform is 100% free for everyone to ensure safe help is always InReach.</Text>\n<LinkFree>Donate to help us to keep our platform free.</LinkFree>",
 		"innovative": "<Title2>Innovative ✨</Title2>\n<Text>We are the world’s first tech platform matching LGBTQ+ people facing persecution or discrimination with safe, independently verified resources.</Text>\n<LinkInnovative>View our source code and contribute.</LinkInnovative>",
 		"intersectional": "<Title2>Intersectional ✊🏿‍✊🏾✊🏽</Title2>\n<Text>We believe LGBTQ+ equality requires trans justice, refugee justice, racial justice, reproductive justice, language justice and more.</Text>\n<LinkIntersect>Learn more about our vetting process.</LinkIntersect>",
-		"our-values": "Our Values",
+		"our-values": "Our values",
 		"safety-first": "<Title2>Safety-first 🔒</Title2>\n<Text>We know online anonymity can be a life-or-death issue for LGBTQ+ people. That's why our App is designed to protect users' confidentiality and safety online.</Text>\n<LinkSafety>Learn more about our privacy policy.</LinkSafety>"
 	}
 }
