--- a/apps/app/public/locales/en/common.json
+++ b/apps/app/public/locales/en/common.json
@@ -123,6 +123,10 @@
 		"accessibility": "<stack16>\n<title2>InReach Accessibility Statement</title2>\n<textReg>InReach’s open source technology is built for the diverse LGBTQ+ community, including users with disabilities.</textReg>\n<textReg>The free InReach App is available on web (desktop and mobile), and native iOS and Android. Beginning with the launch of our latest redesign (February 2023), InReach will strive to meet <linkAccessibility>Web Content Accessibility Guidelines (WCAG) level AA criteria.</linkAccessibility></textReg>\n<textReg>At InReach, we strive to make our tech platform accessible for as many users and devices as possible in alignment with our mission to serve all LGBTQ+ people facing discrimination and persecution.</textReg>",
 		"disclaimer": "<stack16>\n<title2>InReach Disclaimer</title2>\n<textReg>The InReach team will do its best to confirm the eligibility and basic facts about service providers listed on this website. However, we cannot guarantee the viability or capabilities of any such providers. Consequently, InReach assumes no responsibility for the actions of providers listed on this website and users who contact any such providers do so at their own risk.</textReg>\n</stack16>"
 	},
+	"modal-more-options": {
+		"exclude": "Exclude resources that...",
+		"include": "Include resources that..."
+	},
 	"more": {
 		"options": "More options"
 	},
@@ -198,7 +202,7 @@
 	"saved-lists": "Saved Lists",
 	"search": {
 		"include-remote": "Include remote services",
-		"location-placeholder": "Enter state, city, or zip code...",
+		"location-placeholder": "Enter city or zip code...",
 		"look-up-org": "Look up an organization",
 		"no-results": "No results found. Please try again.",
 		"organization-placeholder": "Enter organization name...",
