--- a/apps/app/public/locales/en/common.json
+++ b/apps/app/public/locales/en/common.json
@@ -187,7 +187,7 @@
 	"resource-saved": "Resource saved.",
 	"resources": "Resources",
 	"retry": "Retry",
-	"review-count_interval": "(0)[No reviews];",
+	"review-count_interval": "(0)[No reviews yet];",
 	"review-count_one": "({{count}} review)",
 	"review-count_other": "({{count}} reviews)",
 	"review-not-empty": "Review cannot be empty",
