IN-896 add "locations & offices" tab

--- a/apps/app/public/locales/en/common.json
+++ b/apps/app/public/locales/en/common.json
@@ -132,6 +132,7 @@
 	},
 	"no-reviews": "No reviews yet",
 	"none-apply": "None of these apply to me",
+	"offices-and-locations": "Offices & Locations",
 	"org-image": "Organization photo",
 	"other-specify": "Other (please specify)",
 	"page-title": {
