update mobile nav, pad page bottoms to accommodate navbar

--- a/apps/app/public/locales/en/common.json
+++ b/apps/app/public/locales/en/common.json
@@ -321,6 +321,7 @@
 		"delete": "Delete",
 		"distance": "Distance",
 		"email": "Email",
+		"home": "Home",
 		"hours": "Hours",
 		"more": "more",
 		"next": "Next",
