add suggest to sidebar, mobile styling

--- a/apps/app/public/locales/en/common.json
+++ b/apps/app/public/locales/en/common.json
@@ -202,7 +202,7 @@
 	"search": {
 		"include-remote": "Include remote services",
 		"location-placeholder": "Enter city or zip code...",
-		"look-up-org": "Look up an organization",
+		"look-up-org": "Look up an organization by name",
 		"no-results": "No results found. Please try again.",
 		"organization-placeholder": "Enter organization name...",
 		"suggest-resource": "Can't find it? <1>Suggest an organization</1> you think should be included."
