--- a/apps/app/public/locales/en/landingPage.json
+++ b/apps/app/public/locales/en/landingPage.json
@@ -4,7 +4,7 @@
 	},
 	"call-out": {
 		"hear-from-users": "<Title1>Hear from our users</Title1>",
-		"who-we-are": "<Title1>Who we are</Title1>\n<Text>We are a trans-led nonprofit increasing access to safe, verified resources for the diverse LGBTQ+ community.</Text>\n<Link>Learn more about us.</Link>"
+		"who-we-are": "<Title1>Who we are</Title1>\n<Text>We are a trans-led tech nonprofit increasing resource access for the diverse LGBTQ+ community.</Text>\n<Link>Learn more about us.</Link>"
 	},
 	"hero": {
 		"community": {
