--- a/apps/app/public/locales/en/services.json
+++ b/apps/app/public/locales/en/services.json
@@ -22,7 +22,7 @@
 		"reception-services": "Reception services",
 		"reentry-services": "Re-entry services",
 		"spiritual-support": "Spiritual Support",
-		"sponsors": "Sponsors"
+		"sponsors": "Immigration Sponsorship"
 	},
 	"computers-and-internet": {
 		"CATEGORYNAME": "Computers and Internet",
