--- a/apps/app/public/locales/en/common.json
+++ b/apps/app/public/locales/en/common.json
@@ -320,6 +320,7 @@
 		"and": "and",
 		"and-x-more": "and {{count}} more",
 		"back": "Back",
+		"close": "Close",
 		"coming-soon": "Coming soon",
 		"delete": "Delete",
 		"distance": "Distance",
