revert - handled by CrowdIn

--- a/apps/app/public/locales/fr/common.json
+++ b/apps/app/public/locales/fr/common.json
@@ -120,7 +120,7 @@
 		"error-username-password": "Nom d'utilisateur ou mot de passe incorrect."
 	},
 	"modal-content": {
-		"accessibility": "<stack16>\n<title2>InReach Accessibility Statement</title2>\n<textReg>La technologie open source d'InReach est construite pour la communauté LGBTQ+ diversifiée, y compris les utilisateurs handicapés.</textReg>\n<textReg>L’application gratuite InReach est disponible sur le web (bureau et mobile) et sur iOS et Android natifs. À partir du lancement de notre toute dernière reconception (juin 2023), InReach s’efforcera de satisfaire aux critères AA du niveau <linkAccessibility>des lignes directrices sur l’accessibilité au contenu Web (AMCAG).</linkAccessibility></textReg>\n<textReg>À l'entrée, nous nous efforçons de rendre notre plateforme technologique accessible au plus grand nombre d'utilisateurs et d'appareils possible, en accord avec notre mission de servir toutes les personnes LGBTQ+ victimes de persécution ou discrimination.</textReg>",
+		"accessibility": "<stack16>\n<title2>InReach Accessibility Statement</title2>\n<textReg>La technologie open source d'InReach est construite pour la communauté LGBTQ+ diversifiée, y compris les utilisateurs handicapés.</textReg>\n<textReg>L’application gratuite InReach est disponible sur le web (bureau et mobile) et sur iOS et Android natifs. À partir du lancement de notre toute dernière reconception (février 2023), InReach s’efforcera de satisfaire aux critères AA du niveau <linkAccessibility>des lignes directrices sur l’accessibilité au contenu Web (AMCAG).</linkAccessibility></textReg>\n<textReg>À l'entrée, nous nous efforçons de rendre notre plateforme technologique accessible au plus grand nombre d'utilisateurs et d'appareils possible, en accord avec notre mission de servir toutes les personnes LGBTQ+ victimes de discrimination et de persécution.</textReg>",
 		"disclaimer": "<stack16>\n<title2>InReach Disclaimer</title2>\n<textReg>L'équipe InReach fera de son mieux pour confirmer l'admissibilité et les faits de base sur les fournisseurs de services répertoriés sur ce site Web. Cependant, nous ne pouvons pas garantir la viabilité ou les capacités de ces fournisseurs. Par conséquent InReach n'assume aucune responsabilité quant aux actions des fournisseurs répertoriés sur ce site et des utilisateurs qui contactent ces fournisseurs à leurs propres risques.</textReg>\n</stack16>"
 	},
 	"modal-more-options": {
@@ -156,6 +156,8 @@
 	"password-saved": "Mot de passe enregistré !",
 	"photo-count_interval": "(0)[Aucune photo.];(1)[{{count}} photo];(2-inf)[{{count}} photos]",
 	"photo_interval": "(0)[Aucune photo];(3-inf)[{{count}} photos];",
+	"photo_one": "Photo",
+	"photo_other": "Photos",
 	"powered-by-vercel": "Propulsé par Vercel",
 	"prefer-not-to-say": "Préférer ne pas dire",
 	"privacy-policy": "Politique de confidentialité",
@@ -174,10 +176,7 @@
 		"<textDarkGray><title2>Analyse d'utilisation du site</title2></textDarkGray>"
 	],
 	"privacy-statement-foot": "<linkPolicy>Lisez notre politique de confidentialité complète pour plus d'informations</linkPolicy>",
-	"privacy-statement-head": [
-		"<emojiLg>🔒</emojiLg>",
-		"<title2>Déclaration de confidentialité</title2>"
-	],
+	"privacy-statement-head": ["<emojiLg>🔒</emojiLg>", "<title2>Déclaration de confidentialité</title2>"],
 	"privatePractice": "Cabinet médical privé",
 	"profile": "Profil",
 	"questions": "Des questions ?",
@@ -190,9 +189,13 @@
 	"resources": "Ressource",
 	"retry": "Réessayer",
 	"review-count_interval": "(0)[Aucun commentaire];",
+	"review-count_one": "{{count}} avis",
+	"review-count_other": "{{count}} avis",
 	"review-not-empty": "La revue ne peut pas être vide",
 	"review-note": "Votre évaluation ne sera pas enregistrée tant que vous n'aurez pas entré un commentaire et cliquez sur « Soumettre ».",
 	"review-resource": "Revoir cette ressource",
+	"review_one": "Review",
+	"review_other": "Reviews",
 	"safety-exit": "Sortie de sécurité",
 	"save": "Enregistrer",
 	"saved": "Enregistré",
@@ -305,7 +308,11 @@
 		"verifying": "Vérification du compte..."
 	},
 	"view-list": "Voir la liste",
+	"view-x-result_one": "Voir le résultat de {{count}}",
+	"view-x-result_other": "Voir {{count}} résultats",
 	"visit": "Visiter",
+	"website_one": "Website",
+	"website_other": "Websites",
 	"words": {
 		"accept": "Accepter",
 		"account": "Compte",
@@ -337,15 +344,5 @@
 		"share": "Partager",
 		"skip": "Ignorer",
 		"support": "Support"
-	},
-	"photo_one": "Photo",
-	"photo_other": "Photos",
-	"review-count_one": "{{count}} avis",
-	"review-count_other": "{{count}} avis",
-	"review_one": "Review",
-	"review_other": "Reviews",
-	"view-x-result_one": "Voir le résultat de {{count}}",
-	"view-x-result_other": "Voir {{count}} résultats",
-	"website_one": "Website",
-	"website_other": "Websites"
+	}
 }
