--- a/apps/app/public/locales/es/common.json
+++ b/apps/app/public/locales/es/common.json
@@ -120,7 +120,7 @@
 		"error-username-password": "Nombre de usuario o contraseña incorrectos."
 	},
 	"modal-content": {
-		"accessibility": "<stack16>\n<title2>Declaración de accesibilidad alcanzado</title2>\n<textReg>La tecnología de código abierto de InReach está construida para la diversa comunidad LGBTQ+. incluyendo usuarios con discapacidades.</textReg>\n<textReg>La aplicación InReach gratuita está disponible en la web (escritorio y móvil), e iOS nativo y Android. Empezando con el lanzamiento de nuestro último rediseño (junio de 2023), InReach se esforzará por cumplir con <linkAccessibility>Directrices de Accesibilidad al Contenido Web (WCAG) criterios AA.</linkAccessibility></textReg>\n<textReg>en InReach, nos esforzamos por hacer que nuestra plataforma tecnológica sea accesible para el mayor número posible de usuarios y dispositivos en línea con nuestra misión de servir a todas las personas LGBTQ+ que sufren persecución o discriminación.</textReg>",
+		"accessibility": "<stack16>\n<title2>Declaración de accesibilidad alcanzado</title2>\n<textReg>La tecnología de código abierto de InReach está construida para la diversa comunidad LGBTQ+. incluyendo usuarios con discapacidades.</textReg>\n<textReg>La aplicación InReach gratuita está disponible en la web (escritorio y móvil), e iOS nativo y Android. Empezando con el lanzamiento de nuestro último rediseño (febrero de 2023), InReach se esforzará por cumplir con <linkAccessibility>Directrices de Accesibilidad al Contenido Web (WCAG) criterios AA.</linkAccessibility></textReg>\n<textReg>en InReach, nos esforzamos por hacer que nuestra plataforma tecnológica sea accesible para el mayor número posible de usuarios y dispositivos en línea con nuestra misión de servir a todas las personas LGBTQ+ que sufren discriminación y persecución.</textReg>",
 		"disclaimer": "<stack16>\n<title2>Aviso de responsabilidad de InReach</title2>\n<textReg>El equipo de InReach hará todo lo posible para confirmar la elegibilidad y los datos básicos sobre los proveedores de servicios listados en este sitio web. Sin embargo, no podemos garantizar la viabilidad o capacidad de ninguno de estos proveedores. En consecuencia, InReach no asume ninguna responsabilidad por las acciones de los proveedores listados en este sitio web y los usuarios que se pongan en contacto con dichos proveedores lo hacen bajo su propio riesgo.</textReg>\n</stack16>"
 	},
 	"modal-more-options": {
@@ -156,6 +156,8 @@
 	"password-saved": "¡Contraseña guardada!",
 	"photo-count_interval": "(0)[No hay fotos aún.];(1)[{{count}} foto];(2-inf)[{{count}} fotos]",
 	"photo_interval": "(0)[Aún no hay fotos];(3-inf)[{{count}} fotos];",
+	"photo_one": "Foto",
+	"photo_other": "Fotos",
 	"powered-by-vercel": "Desarrollado por Vercel",
 	"prefer-not-to-say": "Preferencia a no decir",
 	"privacy-policy": "Política de privacidad",
@@ -174,10 +176,7 @@
 		"<textDarkGray><title2>Análisis de uso del sitio</title2></textDarkGray>"
 	],
 	"privacy-statement-foot": "<linkPolicy>Lea nuestra política de privacidad completa para obtener más información</linkPolicy>",
-	"privacy-statement-head": [
-		"<emojiLg>🔒</emojiLg>",
-		"<title2>Declaración de privacidad</title2>"
-	],
+	"privacy-statement-head": ["<emojiLg>🔒</emojiLg>", "<title2>Declaración de privacidad</title2>"],
 	"privatePractice": "Práctica privada",
 	"profile": "Perfil",
 	"questions": "¿Preguntas?",
@@ -190,9 +189,13 @@
 	"resources": "Recursos",
 	"retry": "Reintentar",
 	"review-count_interval": "(0)[Sin reseñas];",
+	"review-count_one": "{{count}} reseña",
+	"review-count_other": "{{count}} reseñas",
 	"review-not-empty": "La reseña no puede estar vacía",
 	"review-note": "Tu calificación no se grabará hasta que introduzcsa una reseña y hagas clic en \"Enviar\"",
 	"review-resource": "Haz una reseña sobre este recurso",
+	"review_one": "Review",
+	"review_other": "Reviews",
 	"safety-exit": "Salida de seguridad",
 	"save": "Guardar",
 	"saved": "Guardado",
@@ -305,7 +308,11 @@
 		"verifying": "Verificando cuenta..."
 	},
 	"view-list": "Ver lista",
+	"view-x-result_one": "Ver {{count}} resultado",
+	"view-x-result_other": "Ver {{count}} resultados",
 	"visit": "Visita",
+	"website_one": "Página web",
+	"website_other": "Página web",
 	"words": {
 		"accept": "Aceptar",
 		"account": "Cuenta",
@@ -337,15 +344,5 @@
 		"share": "Compartir",
 		"skip": "Saltar",
 		"support": "Apoyo"
-	},
-	"photo_one": "Foto",
-	"photo_other": "Fotos",
-	"review-count_one": "{{count}} reseña",
-	"review-count_other": "{{count}} reseñas",
-	"review_one": "Review",
-	"review_other": "Reviews",
-	"view-x-result_one": "Ver {{count}} resultado",
-	"view-x-result_other": "Ver {{count}} resultados",
-	"website_one": "Página web",
-	"website_other": "Página web"
+	}
 }
