--- a/apps/app/public/locales/ru/common.json
+++ b/apps/app/public/locales/ru/common.json
@@ -37,9 +37,9 @@
 	"contact": "Контакт",
 	"contact-us": "Свяжитесь с нами",
 	"count": {
-		"result_one": "{{count}} результат",
 		"result_few": "{{count}} результатов",
 		"result_many": "{{count}} результатов",
+		"result_one": "{{count}} результат",
 		"result_other": "{{count}} результатов"
 	},
 	"country-select": "Выберите страну",
@@ -122,7 +122,7 @@
 		"error-username-password": "Неверное имя пользователя или пароль."
 	},
 	"modal-content": {
-		"accessibility": "<stack16>\n<title2>Заявление о доступности InReach</title2>\n<textReg>Технология открытого исходного кода InReach создана для сообщества LGBTQ+, включая пользователей с ограниченными возможностями.</textReg>\n<textReg>Бесплатное приложение InReach доступно на рабочем столе и мобильных устройствах, а также на iOS и Android. Начиная с выхода нашего последнего редизайна (июнь 2023), InReach будет стремиться к соблюдению критериев сетевого контента <linkAccessibility>в соответствии с принципами (WCAG) уровня АА.</linkAccessibility></textReg>\n<textReg>в InReach, мы стремимся сделать технологическую платформу максимально доступной для как можно большего числа пользователей и устройств в соответствии с нашей миссией, чтобы обслуживать всех людей LGBTQ+ с преследованием или дискриминацией.</textReg>",
+		"accessibility": "<stack16>\n<title2>Заявление о доступности InReach</title2>\n<textReg>Технология открытого исходного кода InReach создана для сообщества LGBTQ+, включая пользователей с ограниченными возможностями.</textReg>\n<textReg>Бесплатное приложение InReach доступно на рабочем столе и мобильных устройствах, а также на iOS и Android. Начиная с выхода нашего последнего редизайна (Февраль 2023), InReach будет стремиться к соблюдению критериев сетевого контента <linkAccessibility>в соответствии с принципами (WCAG) уровня АА.</linkAccessibility></textReg>\n<textReg>в InReach, мы стремимся сделать технологическую платформу максимально доступной для как можно большего числа пользователей и устройств в соответствии с нашей миссией, чтобы обслуживать всех людей LGBTQ+ с дискриминацией и преследованиями.</textReg>",
 		"disclaimer": "<stack16>\n<title2>InReach Disclaimer</title2>\n<textReg>команда InReach сделает все возможное для подтверждения права на участие и основных фактов о поставщиках услуг, перечисленных на этом сайте. Тем не менее, мы не можем гарантировать жизнеспособность или возможности таких поставщиков. Следовательно, InReach не берет на себя ответственности за действия поставщиков, перечисленных на этом сайте, и пользователей, которые связываются с такими поставщиками на свой страх и риск.</textReg>\n</stack16>"
 	},
 	"modal-more-options": {
@@ -157,7 +157,11 @@
 	"password-reset-success": "<Text>Пожалуйста, <LoginModal>войдите</LoginModal> используя ваш новый пароль.</Text>",
 	"password-saved": "Пароль сохранен!",
 	"photo-count_interval": "(0)[Еще нет фотографий.];(1)[{{count}} фото];(2-inf)[{{count}} фото]",
+	"photo_few": "Фото",
 	"photo_interval": "(0)[Еще нет фотографий];(3-inf)[{{count}} фотографий];",
+	"photo_many": "Фото",
+	"photo_one": "Фото",
+	"photo_other": "Фото",
 	"powered-by-vercel": "При поддержке Vercel",
 	"prefer-not-to-say": "Предпочитаю не говорить",
 	"privacy-policy": "Политика конфиденциальности",
@@ -176,10 +180,7 @@
 		"<textDarkGray><title2>Аналитика использования сайта</title2></textDarkGray>"
 	],
 	"privacy-statement-foot": "<linkPolicy>Прочтите нашу полную политику конфиденциальности для получения дополнительной информации</linkPolicy>",
-	"privacy-statement-head": [
-		"<emojiLg>🔒</emojiLg>",
-		"<title2>Конфиденциальность</title2>"
-	],
+	"privacy-statement-head": ["<emojiLg>🔒</emojiLg>", "<title2>Конфиденциальность</title2>"],
 	"privatePractice": "Частная практика",
 	"profile": "Профиль",
 	"questions": "Вопросы?",
@@ -191,10 +192,18 @@
 	"resource-saved": "Ресурс сохранен.",
 	"resources": "Ресурсы",
 	"retry": "Повторить",
+	"review-count_few": "{{count}} отзывов",
 	"review-count_interval": "(0)[Без рассмотрений];",
+	"review-count_many": "{{count}} отзывов",
+	"review-count_one": "{{count}} отзыв",
+	"review-count_other": "{{count}} отзывов",
 	"review-not-empty": "Отзыв не может быть пустым",
 	"review-note": "Рейтинг не будет записан до тех пор, пока вы не напишите отзыв и нажмите кнопку «Отправить».",
 	"review-resource": "Просмотреть этот ресурс",
+	"review_few": "Reviews",
+	"review_many": "Reviews",
+	"review_one": "Review",
+	"review_other": "Reviews",
 	"safety-exit": "Выход из системы безопасности",
 	"save": "Сохранить",
 	"saved": "Сохранено",
@@ -307,7 +316,15 @@
 		"verifying": "Проверка учетной записи..."
 	},
 	"view-list": "Просмотр списка",
+	"view-x-result_few": "Посмотреть {{count}} результаты",
+	"view-x-result_many": "Посмотреть {{count}} результаты",
+	"view-x-result_one": "Просмотр результата {{count}}",
+	"view-x-result_other": "Посмотреть {{count}} результаты",
 	"visit": "Посетить",
+	"website_few": "Websites",
+	"website_many": "Websites",
+	"website_one": "Website",
+	"website_other": "Websites",
 	"words": {
 		"accept": "Принять",
 		"account": "Аккаунт",
@@ -339,25 +356,5 @@
 		"share": "Поделиться",
 		"skip": "Пропустить",
 		"support": "Support"
-	},
-	"photo_one": "Фото",
-	"photo_few": "Фото",
-	"photo_many": "Фото",
-	"photo_other": "Фото",
-	"review-count_one": "{{count}} отзыв",
-	"review-count_few": "{{count}} отзывов",
-	"review-count_many": "{{count}} отзывов",
-	"review-count_other": "{{count}} отзывов",
-	"review_one": "Review",
-	"review_few": "Reviews",
-	"review_many": "Reviews",
-	"review_other": "Reviews",
-	"view-x-result_one": "Просмотр результата {{count}}",
-	"view-x-result_few": "Посмотреть {{count}} результаты",
-	"view-x-result_many": "Посмотреть {{count}} результаты",
-	"view-x-result_other": "Посмотреть {{count}} результаты",
-	"website_one": "Website",
-	"website_few": "Websites",
-	"website_many": "Websites",
-	"website_other": "Websites"
+	}
 }
