--- a/apps/app/public/locales/en/common.json
+++ b/apps/app/public/locales/en/common.json
@@ -280,6 +280,9 @@
 	"survey": {
 		"birthyear-req-value": "Year must be between {{year1}} and {{year2}}, i.e 2005",
 		"finish": "Finish",
+		"launch-item1": "<Bold>Why do we ask?</Bold> Understanding our user demographics can help us to quantify our impact, raise funds, and evaluate future product decisions.",
+		"launch-item2": "<Bold>Safety-first:</Bold> Your answers are stored anonymously and not connected to you as an individual user or to your user account.",
+		"launch-title": "Please take a few minutes to tell us about yourself in our anonymous user survey.",
 		"not-right-now": "Not right now",
 		"question-1-title": "How would you describe yourself?",
 		"question-2-placeholder": "Enter country...",
@@ -298,8 +301,6 @@
 	"uncheck-all": "Uncheck all",
 	"unclaimed": "Unclaimed",
 	"user-avatar": "User avatar",
-	"user-survey-body": "<textUtility1>Why do we ask? Understanding our user demographics can help us to quantify our impact, raise funds, and evaluate future product decisions.</textUtility1>\n<textUtility1>Safety-first: Your answers are stored anonymously and not connected to you as an individual user or to your user account.</textUtility1>",
-	"user-survey-heading": "<emojiLg>📋</emojiLg>\n<title>Please take a few minutes to tell us about yourself in our anonymous user survey.</title></textDarkGray>",
 	"verified-information": "Verified information",
 	"verified-information-detail": "The information on this page was last updated {{dateString}}. InReach prioritizes accuracy and user safety, and updates all information at least once every 6 months.  For more information on our vetting process, please visit our Vetting Process page on InReach.org.",
 	"verify-account": {
