--- a/apps/app/public/locales/en/common.json
+++ b/apps/app/public/locales/en/common.json
@@ -130,7 +130,7 @@
 	"more": {
 		"options": "More options"
 	},
-	"no-reviews": "No reviews yet",
+	"no-reviews": "No reviews have been submitted for this organization yet. Be the first to share your experience!",
 	"none-apply": "None of these apply to me",
 	"offices-and-locations": "Offices & Locations",
 	"org-image": "Organization photo",
@@ -188,7 +188,7 @@
 	"resource-saved": "Resource saved.",
 	"resources": "Resources",
 	"retry": "Retry",
-	"review-count_interval": "(0)[No reviews yet];",
+	"review-count_interval": "(0)[No reviews have been submitted for this organization yet. Be the first to share your experience!];",
 	"review-count_one": "({{count}} review)",
 	"review-count_other": "({{count}} reviews)",
 	"review-not-empty": "Review cannot be empty",
