--- a/apps/app/public/locales/en/user.json
+++ b/apps/app/public/locales/en/user.json
@@ -29,7 +29,9 @@
 	"immigration-asylee": "Asylee (granted asylum)",
 	"immigration-asylum-seeker": "Asylum seeker",
 	"immigration-dreamer": "Dreamer (DACA recipient)",
-	"immigration-immigrant": "Immigrant",
+	"immigration-immigrant": "Other immigrant",
+	"immigration-none": "I do not identify as any of these",
+	"immigration-prefer-not-to-say": "Prefer not to say",
 	"immigration-refugee": "Refugee",
 	"lcr": "Local Community Reviewer",
 	"provider": "Service Provider",
